<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="60dp">

    <TextView
        android:id="@+id/computer_id"
        android:layout_width="15dp"
        android:layout_height="80dp"
        android:layout_column="0"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ticket_id" />

    <TextView
        android:id="@+id/computer_name"
        android:layout_width="125dp"
        android:layout_height="80dp"
        android:layout_column="1"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/computer_name" />

    <TextView
        android:id="@+id/computer_serial"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_column="4"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/computer_serial_number" />

    <TextView
        android:id="@+id/computer_location"
        android:layout_width="75dp"
        android:layout_height="80dp"
        android:layout_column="4"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ticket_location" />

</TableRow>