<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.allticket.AllTicketFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/alltickets_table_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/allticket_table_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey">

                    <TextView
                        android:id="@+id/ticket_id"
                        android:layout_width="15dp"
                        android:layout_height="80dp"
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ticket_id" />

                    <TextView
                        android:id="@+id/ticket_title"
                        android:layout_width="125dp"
                        android:layout_height="80dp"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ticket_title" />

                    <TextView
                        android:id="@+id/ticket_category"
                        android:layout_width="75dp"
                        android:layout_height="80dp"
                        android:layout_column="4"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ticket_category" />

                    <TextView
                        android:id="@+id/ticket_location"
                        android:layout_width="75dp"
                        android:layout_height="80dp"
                        android:layout_column="4"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ticket_location" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>