<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.computerList.ComputerListFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/computers_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="gone" />

            <TableLayout
                android:id="@+id/computers_table_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:id="@+id/computers_table_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/lightgrey">

                    <TextView
                        android:id="@+id/computer_id"
                        android:layout_width="15dp"
                        android:layout_height="80dp"
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ticket_id" />

                    <TextView
                        android:id="@+id/computer_name"
                        android:layout_width="125dp"
                        android:layout_height="80dp"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/computer_name" />

                    <TextView
                        android:id="@+id/computer_serial"
                        android:layout_width="75dp"
                        android:layout_height="80dp"
                        android:layout_column="4"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/computer_serial_number" />

                    <TextView
                        android:id="@+id/computer_location"
                        android:layout_width="75dp"
                        android:layout_height="80dp"
                        android:layout_column="4"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ticket_location" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>